Fixed BUG#7049: Stored procedure CALL errors are ignored   Search the chain of sp_rcontexts recursively for handlers. If one is found,   it will be detected in the sp_head::execute() method at the corresponding   level.