sql/sp_rcontext.h
@@ -66,7 +66,7 @@ class sp_rcontext : public Sql_alloc
   */
   Query_arena *callers_arena;
 
-  sp_rcontext(uint fsize, uint hmax, uint cmax);
+  sp_rcontext(sp_rcontext *prev, uint fsize, uint hmax, uint cmax);
 
   ~sp_rcontext()
   {
@@ -225,6 +225,8 @@ private:
 
   sp_cursor **m_cstack;
   uint m_ccount;
+
+  sp_rcontext *m_prev_ctx;      // Previous context (NULL if none)
 
 }; // class sp_rcontext : public Sql_alloc
 
